--- a/manifest.json
+++ b/manifest.json
@@ -20,7 +20,7 @@
             "type": "image/png"
         },
         {
-            "src": "./images/images/icon-384x384.png",
+            "src": "./images/icon-384x384.png",
             "sizes": "384x384",
             "type": "image/png"
         },
@@ -31,9 +31,9 @@
         },
         {
             "src": "./images/maskable_icon.png",
-            "sizes": "196x196",
+            "sizes": "192x192",
             "type": "image/png",
-            "purpose": "any maskable"
+            "purpose": "maskable"
           }
     ]
 }
