--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
     "background_color": "#f69435",
     "display": "standalone",
     "orientation": "portrait",
-
+    "start_url": ".",
     "name": "PWA APP",
     "short_name": "PWA APP",
     "description": "First PWA App",
